# AI-HR-SAAS

./: .dockerignore  .env  .gitignore  CLAUDE.md  Dockerfile  README.md  README_API.md  TESTING.md  alembic.ini  deploy_optimized_services.sh  deploy_simple.sh  pyproject.toml  pytest.ini  test_job_knowledge_fix.py
.cursor/rules/: developer.mdc
app/: __init__.py  init_app.py  main.py
app/ai/: __init__.py  base.py  client.py  conversation_handler.py  intent_classifier.py  llm_caller.py
app/api/: deps.py  permissions.py  responses.py
app/auth/: permissions.py
app/conversation_flow/: QUICKSTART.md  README.md  TODO.md  __init__.py  dynamic_executor.py  models.py  node_factory.py  orchestrator.py
app/core/: config.py  dependencies.py  exceptions.py  security.py  transaction.py
app/infrastructure/: __init__.py
app/integrations/: __init__.py  base.py
app/middleware/: __init__.py  error_handler.py  rate_limiter.py  request_id.py  security.py  tenant_context.py
app/models/: __init__.py  activity_log.py  ai_match_result.py  async_task.py  auth_token.py  base.py  candidate.py  candidate_chat_history.py  candidate_conversation.py  channel.py  chat_log.py  chat_message.py  chat_session.py  conversation.py  conversation_flow_node_execution_log.py  conversation_question_tracking.py  education_history.py  email_account.py  email_log.py  interview.py  job.py  job_channel.py  job_knowledge_base.py  job_preference.py  job_question.py  knowledge_hit_log.py  knowledge_question_variant.py  llm_execution_log.py  llm_prompt_template.py  matching_result.py  (+10 more)
docker/: Dockerfile  docker-compose.yml
docs/:  Database Design & Usage Core Guidelines.md  API_DOCUMENTATION.md  API_QUICK_REFERENCE.md  API接口修复报告.md  CHANGELOG_RANGE_FIELDS.md  COMPLETE_API_REFERENCE.md  DATABASE_SCHEMA.sql  FIELD_MAPPING.md  LLM使用指南.md  PRODUCTION_RESTRUCTURE_PLAN.md  README.md  candidate_chat_flow.md  candidate_chat_flow_optimization.md  conversation_with_claude.md  job_knowledge_categories_migration.sql  job_knowledge_categories_migration_report.md  job_knowledge_fix_report.md  llm_example.py  mock-data.ts  postman_collection.json  候选人对话流程.py  渠道接口修复报告.md  简单重构完成报告.md  职位结构.md
migrations/: env.py
scripts/: create_migration.sh  import_mock_data.sql  init_db.py  init_test_db.sh  migrate.sh  run_tests.sh  setup_database.sh
tests/: README.md  TEST_GUIDE.md  conftest.py  temp  test_account.py  test_auth.py  test_candidate_conversations.py  test_candidate_conversations_api.py  test_conversation_question_tracking.py  test_embedding_factory.py  test_job_knowledge.py  test_job_questions.py  test_jobs.py  test_resumes.py  test_stats.py
(+206 files in other folders)
