[project]
name = "hr-saas"
version = "1.0.0"
description = "AI-powered HR Recruitment SAAS Platform"
authors = [
    {name = "Your Team", email = "team@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "gunicorn>=22.0.0",
    "sqlalchemy[asyncio]>=2.0.31",
    "asyncpg>=0.29.0",
    "alembic>=1.13.2",
    "redis[hiredis]>=5.0.8",
    "celery[redis]>=5.4.0",
    "pydantic[email]>=2.8.2",
    "pydantic-settings>=2.4.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "aiofiles>=24.1.0",
    "httpx>=0.27.0",
    # AI相关
    "openai>=1.0.0",
    "langchain>=0.2.14",
    "langchain-openai>=0.1.22",
    "langchain-anthropic>=0.1.23",
    "langchain-community>=0.2.12",
    # 可观测性
    "structlog>=24.4.0",
    "python-json-logger>=2.0.7",
    "opentelemetry-api>=1.26.0",
    "opentelemetry-sdk>=1.26.0",
    "opentelemetry-instrumentation-fastapi>=0.47b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.47b0",
    "opentelemetry-instrumentation-redis>=0.47b0",
    "opentelemetry-exporter-otlp-proto-http>=1.26.0",
    "deprecated>=1.2.14",
    "prometheus-client>=0.20.0",
    # RPA
    "playwright>=1.46.0",
    # 邮件
    "exchangelib>=5.4.2",
    "aioimaplib>=1.1.0",
    # MinIO
    "minio>=7.2.8",
    # PDF解析
    "pypdf>=4.3.1",
    "python-docx>=1.1.2",
    "PyMuPDF>=1.24.0",
    "pdfplumber>=0.10.0",
    "Pillow>=10.0.0",
    "tabulate>=0.9.0",
    "pytesseract>=0.3.10",
    "pdf2image>=1.17.0",
    # 向量数据库
    "pgvector>=0.2.5",
    # 工具
    "tenacity>=9.0.0",
    "pytz>=2024.1",
    "easyocr>=1.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
    "pytest-cov>=5.0.0",
    "black>=24.8.0",
    "ruff>=0.6.1",
    "mypy>=1.11.1",
    "ipython>=8.26.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []

